[package]
name = "vaultlog"
version = "0.1.0"
edition = "2024"

[dependencies]

serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
